--- a/4-styles.css
+++ b/4-styles.css
@@ -42,7 +42,7 @@
 
   /** BUTTON **/
   --button-display: inline-block;
-  --button-padding: 0.5rem 2rem;
+  --button-padding: 0.8rem 2rem;
   --button-border: var(--color-secondary) solid 0.2rem;
   --button-border-radius: 2rem;
   --button-text-color: var(--color-primary);
@@ -112,6 +112,15 @@ a {
   text-decoration: none;
 }
 
+.visually-hidden:not(:focus):not(:active) {
+  position: absolute !important;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  clip: rect(1px 1px 1px 1px);
+  white-space: nowrap;
+}
+
 /* Layout 
 ============================= */
 
@@ -149,7 +158,7 @@ a {
 
 .header-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .button {
@@ -163,8 +172,11 @@ a {
   color: var(--button-text-color);
   text-decoration: var(--button-text-decoration);
   text-transform: uppercase;
-  filter: drop-shadow(0px 2px 20px rgba(0, 0, 0, 0.5));
 }
+
+.section-hero .button {
+  filter: drop-shadow(0px 2px 20px rgba(0, 0, 0, 0.5));
+} 
 
 .button:hover {
   opacity: 90%;
@@ -284,6 +296,159 @@ section {
   margin: 0 0 30px 0;
 }
 
+/* Form Section
+============================= */
+#contact .container, #contact .container .section-body  {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  margin: auto;
+}
+
+#contact {
+  background-color: white;
+  color: black;
+  width: 100%;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+  flex-wrap: nowrap;
+  border: none;
+  border-bottom: 0.1rem solid black;
+}
+
+fieldset {
+  border: none;
+  width: 350px;
+}
+
+label {
+  width: 120px;
+  padding-top: 40px;
+  padding-bottom: 0;
+  padding-right: 10px;
+  cursor: pointer;
+  display: block;
+  font-size: 14px;
+  font-weight: var(--font-weight-semibold);
+  text-align: left;
+}
+
+textarea, input[type="text"], input[type="email"] {
+  width: 100%;
+  padding-top: 40px;
+  padding-bottom: 0;
+  line-height: 1;
+  border: none;
+  outline: 0;
+  transition: background-color 0.4s ease-in-out;
+}
+
+textarea:focus, input[type="text"]:focus, input[type="email"]:focus {
+  background-color: #f8f8f8;
+}
+
+.button-form {
+  padding-top: 60px;
+}
+
+/* Form group
+============================= */
+
+
+.form-group:focus-within {
+  background-color: #f8f8f8;
+  transition: 0.3s;
+}
+
+/* Form help
+============================= */
+
+.form-group .form-help {
+  margin: 0;
+  line-height: 1;
+  letter-spacing: 0.019rem;
+  color: darkgray;
+  font-size: var(--font-size-small);
+  max-height: 0;
+  transition: 0.3s;
+  overflow: hidden;
+}
+
+.form-group:focus-within .form-help {
+  max-height: 20rem;
+  margin: 0.4rem 0 0;
+}
+
+/* Form error handling
+============================= */
+input ~ .form-field.icon::after {
+  height: 100%;
+  right: 0;
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  width: 1.3rem;
+}
+
+/* invalid default handling
+============================= */
+
+input:required:valid ~ .form-field-icon::after {
+  content: '✔';
+  color: green;
+}
+
+/* Hide helper text
+============================= */
+input:required:valid ~ .form-help {
+  max-height: 0;
+}
+
+/* Footer
+============================= */
+footer {
+  background-color: #071629;
+  padding: 40px 100px 10px;
+}
+
+.nav-footer {
+  background-color: #071629;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.footer-img {
+  width: 200px;
+}
+
+.list-footer {
+  list-style: none;
+  display: flex;
+}
+
+.list-footer a {
+  color: white;
+  font-size: var(--font-size-xx-large); 
+  letter-spacing: 10px;
+}
+
+footer p {
+  text-align: center;
+  color: white;
+  opacity: 0.35;
+  mix-blend-mode: normal;
+  font-style: normal;
+  font-weight: 400;
+}
+
+
 /* Adaptative layout
 ============================= */
 
@@ -322,6 +487,17 @@ section {
 
   .col-sections {
     width: 50%;
+  }
+
+  .form-group {
+    width: 90%;
+  }
+
+  .nav-footer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 
 }
@@ -408,6 +584,10 @@ section {
   }
 
   .col-sections {
+    width: 100%;
+  }
+
+  fieldset {
     width: 100%;
   }
 }
